Das erzwingt bei allen Dataobjects ein Assign und dafür hätte ich gerne eine bessere Implementierung, als dass ich das jedesmal machen muss

- Rechtegruppen haben jetzt auch einen Accesscode, Idee ist, dass man sich selbst in so eine Gruppe eintragen kann, wenn man den Accesscode kennt

- Bei einer Rechtegruppe wird jetzt auch angezeigt, wenn man der Owner dieser Gruppe ist

2023-03-23
- Die Font PointSize kann jetzt mit Buttons +/- verstellt werden, das geht besser als mit der Eingabe, weil da auch mal 1 oder 0 steht und dann nix mehr angezeigt wird.

2023-03-22
- Im Configurator funktioniert das neue Supermenü jetzt

- Wenn das AppMenü geöfffnet wird, dann wird jetzt die Page die durch das Supermenü geöffnet wurde wieder geschlossen

- Im Header wird jetzt auch der richtige Font eingesetzt

- Das AppMenü wird geschlossen, wenn was im Supermenü angeklickt wird

- Den Footer habe ich wieder entfernt, da liegt ja das Supermenü

- Die Font PointSize kann jetzt im Configurator ausprobiert werden, aber wird noch nicht gespeichert und für die App deployed

- Die Font PointSize wird jetzt auch in der App-Konfiguration gespeichert und entsprechend verteilt.

2023-03-21
- Urbanist Font eingebunden

- Viele Design und Layout Änderungen, das ist immer noch Work in Progress

2023-03-11
- Dienst/Pause/Dienstgangzeiten können jetzt auch nachträglich eingefügt werden
Beim Einfügen wird serverseitig geprüft, ob das auch wirklich geht.

- Es gibt eine Arbeitszeitenübersicht
Hier können auch Dienst/Pause/Dienstgangzeiten eingetragen werden, das wird aber (noch) nicht sofort in der Übersicht angezeigt.

- In der Arbeitszeienübersicht werden die nötigen Pausen automatisch abgezogen und als "Automatische Pause" (kurz AP) dargestellt.

- Für jeden Arbeitszeitbeginn - Ende abschnitt gibt es eine Kachel, die man ausklappen kann und dann werden darin alle einzelnen Ereignisse angezeigt, so dass die Berechnung nachvollzogen werden kann.
