@@ -1,0 +1,7 @@
+#include "datamodelqobjectinterface.h"
+
+DataModelQObjectInterface::DataModelQObjectInterface(QObject *parent)
+    : QAbstractItemModel{parent}
+{
+
+}
